# GP2BaseCode

./: CMakeLists.txt
Game/: CMakeLists.txt
Game/include/: FileSystem.h  Model.h
Game/src/: FileSystem.cpp  Shader.cpp  Texture.cpp
Mac/GP2BaseCode/: GP2BaseCode-Info.plist
Mac/GP2BaseCode.xcodeproj/: project.pbxproj
Win/: SDLTest.sln  SDLTest.vcxproj
assets/shaders/: ambientFS.glsl  ambientVS.glsl  colourFilterFS.glsl  diffuseFS.glsl  simpleFS.glsl  simpleInstanceVS.glsl  simplePostProcessAnimFS.glsl  simplePostProcessRippleFS.glsl  simpleVS.glsl  skyFS.glsl  skyVS.glsl  specularFS.glsl  specularInstaceVS.glsl  specularReflectionFS.glsl  specularToonFS.glsl  textureInstanceVS.glsl
cmake/: findFBX.cmake  findFBXSDK.cmake  findSDL2.cmake  findSDL2_Image.cmake  findSDL2_ttf.cmake
cmake/modules/: FindGLFW.cmake
include/: BatchedMesh.h  BoundingBox.h  Common.h  Cube.h  FBXLoader.h  GameObject.h  Graphics.h  Material.h  Mesh.h  Renderer.h  Sample.h  Shader.h  Texture.h  Vertices.h
src/: BatchedMesh.cpp  BoundingBox.cpp  FBXLoader.cpp  FileSystem.cpp  GameObject.cpp  Graphics.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Sample.cpp  Shader.cpp  Texture.cpp  main.cpp
